<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity4">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="34dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="34dp"/>


    <ImageView
        android:id="@+id/clock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/clock"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <LinearLayout
        android:id="@+id/cities_and_times1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/marginRight"
        app:layout_constraintStart_toStartOf="@id/marginLeft"
        app:layout_constraintTop_toBottomOf="@id/clock"
        android:layout_marginTop="-20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/timezone1"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/time1" />

            <TextView
                android:id="@+id/city1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/city1"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/timezone2"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/time2" />

            <TextView
                android:id="@+id/city2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/city2"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/timezone3"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/time3" />

            <TextView
                android:id="@+id/city3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/city3"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cities_and_times2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/cities_and_times1"
        app:layout_constraintStart_toStartOf="@id/marginLeft"
        app:layout_constraintEnd_toEndOf="@id/marginRight">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/timezone4"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/time4" />

            <TextView
                android:id="@+id/city4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/city4"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/timezone5"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/time5" />

            <TextView
                android:id="@+id/city5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/city5"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.333"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/timezone6"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:src="@drawable/time6" />

            <TextView
                android:id="@+id/city6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/city6"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>