<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"/>


    <ImageView
        android:id="@+id/clock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/clock"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/header2"
        android:layout_width="355dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/clock"
        app:layout_constraintStart_toStartOf="@id/marginLeft"
        app:layout_constraintEnd_toEndOf="@id/marginRight"
        app:layout_constraintHorizontal_bias="0.5"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/header2"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:gravity="center"
        android:textStyle="bold"
        android:lineHeight="40dp"/>

    <Button
        android:id="@+id/button_casual"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/buttons_gradient"
        android:text="@string/casual"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/marginRight"
        app:layout_constraintStart_toStartOf="@id/marginLeft"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/button_fast"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons_gradient"
        android:text="@string/fast"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_bold"
        app:layout_constraintBottom_toTopOf="@id/button_casual"
        app:layout_constraintEnd_toEndOf="@id/marginRight"
        app:layout_constraintStart_toStartOf="@id/marginLeft"
        android:textSize="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>